# setsat

./: .gitignore  CMakeLists.txt  README.md
ext/: README.txt
include/driver/: driver.hpp  lib_util.hpp  types.hpp
include/resources/: icon.xpm  resource.h  resource.rc
include/ui/: app.hpp  frame.hpp
include/watchdog/: msw_watchdog.hpp  watchdog.hpp
src/driver/: driver.cpp
src/main/: app.cpp  frame.cpp
src/ui/: app.cpp  frame.cpp
src/watchdog/: msw_watchdog.cpp
